[project]
name = "recon-mcp"
version = "0.1.0"
description = "An MCP server that gives AI coding agents (Claude Code, Codex, Cline) safe, structured network & security reconnaissance tools — DNS, WHOIS, TLS, HTTP headers, and port scanning. For authorized testing and education only."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "nan786521" }]
keywords = ["mcp", "model-context-protocol", "security", "recon", "dns", "ssl", "claude", "codex", "cline"]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
recon-mcp = "recon_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recon_mcp"]
